--- a/ife16/b16.html
+++ b/ife16/b16.html
@@ -11,7 +11,7 @@
 			<input id="aqi-city-input" type="text"></label>
 		<br>
 		<label>
-			空气质量指数：
+			空气质量指数dgfgfg：
 			<input id="aqi-value-input" type="text"></label>
 		<br>
 		<button id="add-btn">确认添加</button>
